--- a/backup/2025 深圳市《居住建筑节能设计标准》SJG-45-2025 绿色建筑重点条文.md
+++ b/backup/2025 深圳市《居住建筑节能设计标准》SJG-45-2025 绿色建筑重点条文.md
@@ -9,6 +9,8 @@
 4 过渡季节、夏季主导风速和风向条件下，场地人行活动区域不应出现涡旋或无风区，50%以上可开启外窗室内外表面的风压差宜大于 0.5Pa；
 5 应对小区周边建筑自然通风利用效果的影响进行评估。
 
+![Image](https://github.com/user-attachments/assets/c861cb48-14a7-4f72-b7e6-a7c502549c0f)
+
 ### 附录 C：深圳市通风时段主导风向和风速
 - 风速风向按下图取值。
 - 龙华区大浪街道，风向NE、平均风速1.0m/s。未给出冬季模拟风速风向取值。
