🎉auto update by Gmeek action

--- a/backup/腾讯云对象存储批量压缩.md
+++ b/backup/腾讯云对象存储批量压缩.md
@@ -11,3 +11,7 @@
 <img width="1387" height="670" alt="Image" src="https://github.com/user-attachments/assets/7edb4a8f-5786-4d5c-b379-421869bcf9af" />
 
 - 点击下一步，开始执行压缩。
+
+- 后续新的图片存储，都使用PicGo插件“webp”，把图片转换为webp格式，再上传到对象存储。手机客户端需要对图片进行压缩后再上传。
+
+<img width="800" height="450" alt="Image" src="https://github.com/user-attachments/assets/8eafdfa3-fe7c-4a8c-b23a-ba8559b3858b" />
