--- a/backup/关于.md
+++ b/backup/关于.md
@@ -2,3 +2,16 @@
 
 - 2024年注册了域名，服务器为阿里云，开始野生互联网生活，使用Typecho的 [Joe](https://github.com/HaoOuBa/Joe)主题搭建了博客。
 - 2025年，使用[Gmeek](https://github.com/Meekdai/Gmeek)结合Github 搭建了第二个静态博客。
+
+## 更新记录
+
+### 20250731
+- 使用腾讯云存储avatar.svg、favicon.svg，代替了之前的github存储
+- https://raw.githubusercontent.com/tabortao/imagebed/main/2025/GmeekBlog/favicon.svg
+- https://raw.githubusercontent.com/tabortao/imagebed/main/2025/GmeekBlog/avatar.svg
+
+### 20250730
+- 使用域名绑定了tabortao.github.io，并有Cloudflare进行加速
+
+### 20250729
+- 网上发现了[Gmeek](https://github.com/Meekdai/Gmeek),使用它建立了自己的公开博客。
