🎉auto update by Gmeek action

--- a/backup/腾讯云对象存储图片批量压缩方法.md
+++ b/backup/腾讯云对象存储图片批量压缩方法.md
@@ -1,10 +1,12 @@
 今天想对腾讯云对象存储图片进行一下批量压缩，压缩后图片覆盖之前图片路径，后缀名不变，记录下操作过程。
 
-- 对象存储-批量处理-创建批量处理，开始输入配置
+- 对象存储-批量处理-创建批量处理，开始输入配置。
+- 按前缀过滤，选择要压缩图片的文件夹。（之前压缩后文件存储路径不对，后补充）
 
 <img width="662" height="500" alt="Image" src="https://github.com/user-attachments/assets/72d0e091-5ca0-4ef7-8132-f16a11e7f88f" />
 
 - 操作配置：选择模版，没有就点击创建模版；模板文件名需修改为：${InputName}.${ext}
+- 目标路径，需要选择要压缩图片的文件夹。（之前压缩后文件存储路径不对，后补充）
 
 <img width="988" height="564" alt="Image" src="https://github.com/user-attachments/assets/45e95869-25da-4cd9-95a3-88efacc9505b" />
 
