--- a/backup/腾讯云对象存储图片批量压缩方法.md
+++ b/backup/腾讯云对象存储图片批量压缩方法.md
@@ -14,6 +14,8 @@
 
 - 点击下一步，开始执行压缩。
 
+![Image](https://github.com/user-attachments/assets/0810c472-e335-4c36-8ad8-3e6c3111d49e)
+
 - 后续新的图片存储，都使用PicGo插件“webp”，把图片转换为webp格式，再上传到对象存储。手机客户端需要对图片进行压缩后再上传。
 
 <img width="800" height="450" alt="Image" src="https://github.com/user-attachments/assets/8eafdfa3-fe7c-4a8c-b23a-ba8559b3858b" />
