🎉auto update by Gmeek action

--- a/backup/2025 深圳市《居住建筑节能设计标准》SJG-45-2025 绿色建筑重点条文.md
+++ b/backup/2025 深圳市《居住建筑节能设计标准》SJG-45-2025 绿色建筑重点条文.md
@@ -26,3 +26,10 @@
 
 <img width="895" height="795" alt="Image" src="https://github.com/user-attachments/assets/de8458ed-0c99-4101-925a-3b8c9a41e214" />
 
+
+> [!IMPORTANT]
+> 欢迎关注微信公众号“**可持续学园**”，免费获取更多新鲜技能。
+
+<p align="center">
+  <img src="https://lei-1258171996.cos.ap-guangzhou.myqcloud.com/imgs/2025/20250801104612387.webp" width="300px" />
+</p>
