--- a/backup/关于.md
+++ b/backup/关于.md
@@ -1,9 +1,13 @@
 分享技术，记录生活。
 
+大家好，我是Tabor，一个热爱绿色建筑、LEED、WELL、低碳建筑、超低/近零/零能耗建筑、碳中和建筑、海绵城市、ESG及可持续建筑的绿建人。在这个里我希望能与大家分享我在这些领域的见解和心得，同时也分享一些好玩高效的软件工具，让我们的工作和生活变得更加有趣和高效。
+
+我将以绿色建筑和可持续发展的理念为核心，结合实际案例和经验，与大家一起探讨如何通过科技和创新，创造更加绿色、健康和可持续的未来。希望大家能够在这里找到有价值的信息和灵感，共同为建设美好环境贡献一份力量。感谢大家的关注和支持，期待与大家的交流和互动。
+
 - 2024年注册了域名，服务器为阿里云，开始野生互联网生活，使用Typecho的 [Joe](https://github.com/HaoOuBa/Joe)主题搭建了博客。
 - 2025年，使用[Gmeek](https://github.com/Meekdai/Gmeek)结合Github 搭建了第二个静态博客。
 
-## 更新记录
+## Gmeek更新记录
 
 ### 20250731
 - 使用腾讯云存储avatar.svg、favicon.svg，代替了之前的github存储
